Revision history for Perl extension WWW::Salesforce.

0.25 Nov 12 2015
    - change login URL from www.salesforce.com to login.salesforce.com [github/dclendenan]
      - www.salesforce.com will no longer be an API login endpoint as of Jan 1 2016

0.24 Aug 1 2015
    - https://github.com/redhotpenguin/WWW-Salesforce/pull/20

0.23 Aug 1 2015
    - fixed some POD errors
    - reformatted =item to =head2 in POD
    - alphabetized methods in POD
    - more clearly documented some features closing RT 48274
    - Added some pod and pod coverage tests
    - add stub pod for coverage tests
    - move pod close to code

0.22 Jan 23 2014
    - typo fixes [github/dsteinbrunner]
    - Force UTF8 to not be base64-encoded [github/pc-coholic]

0.21 Dec 30 2013
    - make all WWW::Salesforce::Simple methods available in WWW::Salesforce

0.20 Jun 18 2013
    - Clean up diagnostic messages in unit tests
    - above by Dave Clendenan

0.19 Jun 12 2013
    - Added web proxy support ($WWW::Salesforce::WEB_PROXY=http://my.proxy.com:8080)
    - added unit tests
    - added the ability to override the API URL, for use within salesforce.com
    - above by Dave Clendenan

0.18 Mar 22 2013
    - Added logout() subroutine to end session for logged in user
    - Added bye() subroutine to simple.pm to call logout()
    - Corrected get_tables() subroutine in simple.pm
    - above by charlie redditt

0.17 Dec 12 2012
    - Temporary reversion to 0.15 while 2013 SF api is updated

0.16 Dec 08 2012
    - Element-ordering change for compatability with the
      Spring 2013 release of salesforce.com [Dave Clendenan and Seth Miller]

0.15 Dec 27 2011
    - new features for table metadata inspection [Dmitry Rivlin]

0.14 Fri Jan 07 14:23:00 2011 PST
    - Added queryAll and do_queryAll functionality [Christopher Mckay]

0.13 Sat Oct 30 14:05:00 2010 PST

    - Add LICENSE file per Fedora maintainer request

0.12 Tue Aug 17 19:34:00 2010 PST
    - New maintainer PHRED