@@ -73,9 +73,14 @@
             "CPAN::Meta" : "2.120900"
          },
          "requires" : {
+            "DateTime" : "0",
             "ExtUtils::MakeMaker" : "0",
             "File::Spec" : "0",
-            "Test::More" : "0.88"
+            "POSIX" : "0",
+            "SOAP::Lite" : "1.0",
+            "Test::More" : "0.88",
+            "strict" : "0",
+            "warnings" : "0"
          }
       }
    },
